tests/integration/snapshots/main__integration__sequence__noargs_single_positional.snap
---
source: tests/integration/sequence.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Missing required fields:

Sources:
  cli --settings.*
  defaults

strings  ❌ MISSING <String> 

Missing:
  strings <String> (<strings>)

Run with --help for usage information.
