tests/integration/snapshots/main__integration__sequence__noargs_vec_positional_no_default.snap
---
source: tests/integration/sequence.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Missing required fields:

Sources:
  cli --settings.*
  defaults

strings  ❌ MISSING <Vec<String>> 

Run with --help for usage information.
